Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: 5.12.7, 5.15
-
Fix Version/s: 6.0.0 Alpha
-
Component/s: Quick: Other
-
Labels:None
-
Platform/s:
-
Epic Link:
-
Commits:3ff11ceca37dcc4b6f0420332fa7f6aa007be7f3 (qt/qtdeclarative/dev)
Description
When creating a target item list for handling pointer events, put children after the parent item if they have negative z-order value. This fixes an issue where an item does not receive a pointer event if there is a child item that accepts the event even when that child item is shown under the parent item as per the stacking order.
https://codereview.qt-project.org/c/qt/qtdeclarative/+/288660
Attachments
Issue Links
- resulted in
-
QTBUG-87018 Touch/mouse-related test failures in qtquickcontrols2
-
- Closed
-